# OpenGLNotes

./: CMakeLists.txt  main.cpp
include/: glad.c
shaders/: frag.glsl  vert.glsl
src/: app.h  camera.cpp  camera.h  gl_check.h  main.cpp  mesh.cpp  mesh.h  mesh3d.h  shaders.h  transform.h
